# oxygine-freetype

./: .gitignore  Android.mk  CMakeLists.txt
examples/HelloFreeType/data/: res.xml
examples/HelloFreeType/proj.android/: AndroidManifest.xml  build.xml  default.properties  install.bat
examples/HelloFreeType/proj.cmake/: CMakeLists.txt
examples/HelloFreeType/proj.emscripten/: CMakeLists.txt
examples/HelloFreeType/proj.ios/HelloFreeType_ios.xcodeproj/: project.pbxproj
examples/HelloFreeType/proj.macosx/HelloFreeType_macosx.xcodeproj/: project.pbxproj
examples/HelloFreeType/proj.win32/: HelloFreeType.vcxproj  HelloFreeType.vcxproj.filters
examples/HelloFreeType/src/: example.cpp
freetype/win32/: freetype.lib
proj.ios/oxygine-freetype-ios/oxygine-freetype-ios.xcodeproj/: project.pbxproj
proj.ios/oxygine-freetype-ios/oxygine-freetype-ios.xcodeproj/xcuserdata/denis-mac.xcuserdatad/xcschemes/: oxygine-freetype-ios.xcscheme  xcschememanagement.plist
src/: ResFontFT.cpp  ResFontFT.h
